Update blog source

--- a/source/_posts/CP/CF_sols/CF934/CF934.md
+++ b/source/_posts/CP/CF_sols/CF934/CF934.md
@@ -212,7 +212,9 @@ signed main(){
 
 我 VP 的时候没有想到上面的做法，用了一种比较麻烦的做法，这里简单说一下供参考：
 
-记 $q(x) = \sum b_i x^i, ~ b_0 = p$。那根据题目约束，我们有 $a_i = b_i k + b_{i-1} \in [0, k-1]$。
+记 $q(x) = \sum b_i x^i, ~ b_0 = p$。
+
+那根据题目约束，我们有 $a\_i = b\_i k + b\_{i-1} \in [0, k-1]$。
 
 故可以考虑解上面的不等式组得到 $b_i$，然后将 $a_i$ 还原出来。
 
